--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "url": "https://github.com/ghosts/medium-feed/issues"
   },
   "homepage": "https://github.com/ghosts/medium-feed#readme",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "gulp": "^4.0.0",
+    "gulp-minify": "^3.1.0"
+  },
+  "dependencies": {}
 }
