--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "medium-feed",
-  "version": "0.1.6",
-  "description": "A simple & small utility to get article objects for any Medium user.",
+  "version": "0.1.7",
+  "description": "A simple & small medium-utility to get article objects for any Medium user, topic, or tag.",
   "main": "dist/medium-feed.js",
   "unpkg": "dist/medium-feed.min.js",
   "scripts": {
